Add a DynamoDB table for service resource permissions

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -44,6 +44,12 @@ Resources:
           Properties:
             Path: /signature
             Method: post
+  ResourcePermissionTable:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      PrimaryKey:
+        Name: IamEntityArn
+        Type: String
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
