--- a/service/template.yaml
+++ b/service/template.yaml
@@ -10,6 +10,9 @@ Globals:
   Function:
     Timeout: 3
     Runtime: nodejs12.x
+  Api:
+    Auth:
+      DefaultAuthorizer: AWS_IAM
 
 Resources:
   ListIdentitiesFunction:
