--- a/service/template.yaml
+++ b/service/template.yaml
@@ -13,6 +13,7 @@ Globals:
   Api:
     Auth:
       DefaultAuthorizer: AWS_IAM
+    EndpointConfiguration: REGIONAL
 
 Resources:
   ListIdentitiesFunction:
