Don't invoke lambdas with caller credentials

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -13,6 +13,7 @@ Globals:
   Api:
     Auth:
       DefaultAuthorizer: AWS_IAM
+      InvokeRole: NONE
     EndpointConfiguration: REGIONAL
 
 Resources:
