Rename the DynamoDB primary key
My initial plan was to use the role ARN for the primary key, but have since discovered the IAM unique ID field.

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -58,7 +58,7 @@ Resources:
     Type: AWS::Serverless::SimpleTable
     Properties:
       PrimaryKey:
-        Name: IamEntityArn
+        Name: IamEntityUniqueId
         Type: String
 
 Outputs:
