--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ssh-agent = "0.2.1"
+clap = "2.33.0"
+rusoto_core = "0.42.0"
