--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -13,3 +13,4 @@ rusoto_core = "0.42.0"
 url = "2.1.1"
 futures = "0.1.29"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.48"
