--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -14,3 +14,4 @@ url = "2.1.1"
 futures = "0.1.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.48"
+openssh-keys = "0.4.1"
