--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -15,3 +15,4 @@ futures = "0.1.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.48"
 openssh-keys = "0.4.1"
+base64 = "0.11.0"
