Give the signature lambda access to pub keys too

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -45,7 +45,7 @@ Resources:
         - DynamoDBReadPolicy:
             TableName: !Ref ResourcePermissionTable
         - SSMParameterReadPolicy:
-            ParameterName: "*/deploy-key"
+            ParameterName: "*/deploy-key*"
         - KMSDecryptPolicy:
             KeyId: aws/ssm
       Events:
