--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "agent"
+name = "iam-ssh-agent"
+description = "ssh-agent compatable daemon that uses a serverless backend for list and sign operations."
 version = "0.1.0"
 authors = ["Keith Duncan <keith_duncan@me.com>"]
 edition = "2018"
+repository = "https://github.com/keithduncan/iam-ssh-agent"
+license = "MIT"
+keywords = [ "ssh", "ssh-agent", "aws" ]
+categories = [ "development-tools" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
