Space saving in the docker image

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,8 +1,9 @@
-FROM debian:buster
+FROM debian:buster-slim
 
 RUN apt-get update && \
 	apt-get install -y \
-	ca-certificates
+	ca-certificates && \
+	rm -rf /var/lib/apt/lists/*
 
 COPY target/debian /packages
-RUN dpkg -i /packages/*
+RUN dpkg -i /packages/* && rm -r /packages
