Add more to build script

--- a/agent/script/build
+++ b/agent/script/build
@@ -1,5 +1,12 @@
 #!/bin/bash
 
+set -euxo pipefail
+
+# Build deb
+rm target/debian/*
+docker run --rm -it --volume $PWD:/workspace --workdir /workspace cargo-deb
+
+# Build and push docker image
 docker build -t iam-ssh-agent --squash .
 docker tag iam-ssh-agent:latest keithduncan/iam-ssh-agent:latest
 docker push keithduncan/iam-ssh-agent:latest
