--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -2,6 +2,7 @@ FROM debian:buster-slim
 
 RUN apt-get update && \
 	apt-get install -y \
+	busybox \
 	ca-certificates && \
 	rm -rf /var/lib/apt/lists/*
 
