--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/keithduncan/iam-ssh-agent"
 license = "MIT"
 keywords = [ "ssh", "ssh-agent", "aws" ]
 categories = [ "development-tools" ]
+include = ["/src"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
