--- a/service/template.yaml
+++ b/service/template.yaml
@@ -1,14 +1,21 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  iam-ssh-agent
+  iam-ssh-agent backend
 
-  Sample SAM Template for iam-ssh-agent
+  API Gateway, Lambda functions and DynamoDB table to store permissions.
 
 Parameters:
   AccountIds:
     Type: CommaDelimitedList
     Description: AWS AccountIds whose IAM entities should be allowed to access the API Gateway.
+  EndpointConfiguration:
+    Type: String
+    AllowedValues:
+      - REGIONAL
+      - PRIVATE
+    Default: REGIONAL
+    Description: What kind of API Gateway do you want to create? REGIONAL can be accessed from anywhere including the public Internet (authenticated with IAM credentials), PRIVATE can be restricted to specific VPCs using AWS PrivateLink (additional costs apply).
   
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
@@ -24,7 +31,7 @@ Globals:
       InvokeRole: NONE
       ResourcePolicy:
         AwsAccountWhitelist: !Ref AccountIds
-    EndpointConfiguration: REGIONAL
+    EndpointConfiguration: !Ref EndpointConfiguration
 
 Resources:
   ListIdentitiesFunction:
