--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -22,3 +22,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.48"
 openssh-keys = "0.4.1"
 base64 = "0.11.0"
+env_logger = "0.7.1"
