Link to readme.md from Cargo.toml

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 keywords = [ "ssh", "ssh-agent", "aws" ]
 categories = [ "development-tools" ]
 include = ["/src"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
