--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -6,6 +6,9 @@ RUN apt-get update && \
     apt-get install -y \
       musl-tools
 
+COPY ["src/", "/workspace/src"]
+COPY ["Cargo.toml", "Cargo.lock", "/workspace/"]
+WORKDIR /workspace
 RUN cargo build --release --target x86_64-unknown-linux-musl
 
 FROM alpine:3.11
