Wrap the about text at 80 characters

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -16,6 +16,7 @@ readme = "README.md"
 [dependencies]
 ssh-agent = "0.2.1"
 clap = "2.33.0"
+textwrap = "0.11.0"
 rusoto_core = { version = "0.42.0", default_features = false, features=["rustls"] }
 url = "2.1.1"
 futures = "0.1.29"
