Revert "Use github raw urls for the license and readme"
This reverts commit eb8ff0437cbbece346208b5abc756a4ccc54e4df.

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -41,8 +41,8 @@ Metadata:
     Description: An ssh-agent replacement that uses a caller's IAM identity to control access a list of permitted ssh identities. Designed for less trusted continuous integration environments where you want to use an ssh key without granting access to the raw key material.
     Author: Keith Duncan
     SpdxLicenseId: BSD-3-Clause
-    LicenseUrl: https://raw.githubusercontent.com/keithduncan/iam-ssh-agent/master/LICENSE
-    ReadmeUrl: https://raw.githubusercontent.com/keithduncan/iam-ssh-agent/master/service/README_SAR.md
+    LicenseUrl: ../LICENSE
+    ReadmeUrl: README_SAR.md
     Labels: ['ssh', 'ssh-agent', 'ssh-keys', 'authentication']
     HomePageUrl: https://github.com/keithduncan/iam-ssh-agent
     SourceCodeUrl: https://github.com/keithduncan/iam-ssh-agent
