Update the crates.io license metadata to match the repository
The repository has a bsd 3 clause and so do the serverless applications in the SAR.

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.2.2"
 authors = ["Keith Duncan <keith_duncan@me.com>"]
 edition = "2018"
 repository = "https://github.com/keithduncan/iam-ssh-agent"
-license = "MIT"
+license = "BSD-3-Clause"
 keywords = [ "ssh", "ssh-agent", "aws" ]
 categories = [ "command-line-utilities", "development-tools" ]
 include = ["/src"]
