--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ssh-agent = "0.2.1"
+ssh-agent = { version = "0.2.4", features=["agent"] }
 clap = "2.33.0"
 textwrap = "0.11.0"
 rusoto_core = { version = "0.42.0", default_features = false, features=["rustls"] }
